test(forum): Use getFirst() instead of get(0)
Improved ListForumsUseCaseTest to use getFirst() for better clarity and null safety.  The previous implementation assumed a non-empty list.  This change enhances robustness.